<resources>
    <string name="app_name">DOCO</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="blood">BLOOD</string>
    <string name="bank">BANK</string>
    <string name="main_activity">This is MainActivity</string>
    <string name="hello">Hello</string>
    <string name="username">Username</string>
    <string name="who_can_give_a_donor">Can you be a donor?</string>
    <string name="home_header_desc">There is some condition where you can\'t \n give a donor. Check out here</string>
    <string name="eligible_donors">Eligible Donors</string>
    <string name="blood_donors">Blood Donors</string>
    <string name="ab">AB+</string>
    <string name="umur">Umur</string>
    <string name="send_request">Send Request</string>
    <string name="contact">Contact</string>
    <string name="create_donors_profile">Create Donors Profile</string>
    <string name="nama">Nama</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="a">A+</string>
    <string name="amin">A-</string>
    <string name="b">B+</string>
    <string name="bmin">B-</string>
    <string name="o">O+</string>
    <string name="omin">O-</string>
    <string name="abmin">AB-</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="save_details">Save Details</string>
    <string name="back_icon">Back Icon</string>
    <string name="dropdown_icon">Dropdown Icon</string>
    <string name="no_telepon">No Telepon</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="donor">Donor</string>
    <string name="halo_blooders">Halo Blooders!</string>
    <string name="untuk_mendonor_isi_form_di_bawah_ini_ya">Untuk mendonor, isi form di bawah ini ya!</string>
    <string name="formulir_ketersediaan_mendonor_darah">Formulir Ketersediaan Mendonor Darah</string>
    <string name="apakah_anda_telah_mendonorkan_darah_anda_dalam_jangka_waktu_3_bulan_ini">Apakah anda telah mendonorkan darah anda dalam jangka waktu 3 bulan ini?</string>
    <string name="donor_s_form">Donor\'s Form</string>
    <string name="sex">Sex</string>
    <string name="donate_time">Donate Time</string>

    <string-array name="golongan_darah">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>

    <string-array name="jangka_waktu_donor">
        <item>Ya</item>
        <item>Tidak</item>
    </string-array>

    <string-array name="jenis_kelamin">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

    <string name="login_image">Login Image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_error">Email tidak valid!</string>
    <string name="password">Password</string>
    <string name="password_error">Password tidak valid!</string>
    <string name="daftar">Daftar</string>
    <string name="baru_disini">Baru disini?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="line">Line</string>
    <string name="or">OR</string>
    <string name="login_menggunakan_google">Login menggunakan Google</string>
    <string name="google_logo">Google Logo</string>
    <string name="logout">Logout</string>
    <string name="blood_bank_logo">Blood Bank Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_to_see_what_s_next">Slide to see what\'s next!</string>
    <string name="usia_minimal_untuk_mendonor_adalah_17_tahun_dan_berat_badan_minimal_45_kg">Usia minimal untuk mendonor adalah 17 tahun dan berat badan minimal 45 kg</string>
    <string name="syarat_untuk_mendonor_menurut_palang_merah_indonesia">Syarat Untuk Mendonor menurut Palang Merah Indonesia</string>

    <string name="request_success">Request sent!</string>
    <string name="donors_profile">Donors Profile</string>
</resources>